--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -167,13 +167,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="qoctIntroScreen1.0" translatesAutoresizingMaskIntoConstraints="NO" id="rg4-6B-Od3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="qoctIntroScreen1.0" translatesAutoresizingMaskIntoConstraints="NO" id="rg4-6B-Od3">
                                 <rect key="frame" x="0.0" y="51" width="375" height="456"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X0K-Kp-4Cb">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X0K-Kp-4Cb">
                                 <rect key="frame" x="127" y="551" width="123" height="38"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="GotIt"/>
                                 <connections>
                                     <segue destination="GSY-xC-upK" kind="show" id="tmv-p6-XIe"/>
@@ -181,6 +179,12 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="X0K-Kp-4Cb" firstAttribute="leading" secondItem="Ryn-du-jD0" secondAttribute="leading" constant="127" id="TAP-6J-zzg"/>
+                            <constraint firstItem="X0K-Kp-4Cb" firstAttribute="top" secondItem="rg4-6B-Od3" secondAttribute="bottom" constant="44" id="bX1-qT-Mig"/>
+                            <constraint firstItem="rg4-6B-Od3" firstAttribute="centerX" secondItem="vmb-sw-Nl6" secondAttribute="centerX" id="dXh-5Q-W0M"/>
+                            <constraint firstItem="rg4-6B-Od3" firstAttribute="top" secondItem="Ryn-du-jD0" secondAttribute="top" constant="51" id="uI4-8b-3hg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Ryn-du-jD0"/>
                     </view>
                     <navigationItem key="navigationItem" id="TUr-nw-CHX"/>
